<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="-45dp"
            android:textStyle="bold"
            android:textSize="30dp"
            android:text="Selamat Datang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="Silahkan Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginTop="55dp"
            android:layout_gravity="center"
            android:src="@drawable/userlogin"
            android:layout_width="132dp"
            android:layout_height="132dp" />
        <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:paddingLeft="10dp"
                android:drawablePadding="10dp"
                android:background="@drawable/background_form"
                android:drawableStart="@drawable/person"
                android:id="@+id/username"
                android:hint="Username"
                android:inputType="text"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="65dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:drawablePadding="10dp"
                android:background="@drawable/background_form"
                android:drawableStart="@drawable/key"
                android:id="@+id/password"
                android:hint="Password"
                android:layout_width="match_parent"
                android:layout_height="65dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#1597bb"
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <Button
            android:id="@+id/btnlogin"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:background="#3C4A83"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="Login"
            android:layout_width="match_parent"
            android:layout_height="63dp"/>
        <TextView
            android:id="@+id/txtregistrasi"
            android:paddingTop="15dp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:text="@string/registrasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#8CFFFFFF"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wm">
        </TextView>
    </LinearLayout>

</LinearLayout>